// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing GifGrid should correctly show the component 1`] = `
<Fragment>
  <h3>
     
    One Punch
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Testing GifGrid should show items when images are loaded from useFetchGifs 1`] = `
<Fragment>
  <h3>
     
    One Punch
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      tittle="Image tittle"
      url="https://localhost"
    />
  </div>
</Fragment>
`;
